# puppet-ai

./: .gitignore  CHANGELOG.md  LICENSE  README.md  puppet-ai.yaml.example  pyproject.toml
benchmarks/: run_benchmark.py
docs/superpowers/plans/: 2026-04-02-vision-pipe-hands.md  2026-04-02-vision-pipe-v3-perf.md  2026-04-02-vision-pipe.md  2026-04-03-puppet-ai-v02.md
docs/superpowers/specs/: 2026-04-02-vision-pipe-design.md  2026-04-02-vision-pipe-hands-design.md  2026-04-02-vision-pipe-v3-perf-design.md  2026-04-03-puppet-ai-v02-design.md
examples/: browser_automation.py  desktop_control.py  read_screen.py
integrations/antigravity/: README.md
integrations/claude-code/: README.md
integrations/cline/: README.md
integrations/codex/: README.md
integrations/cursor/: README.md
integrations/gemini/: README.md
integrations/openclaw/: README.md  SOUL_VISION.md
integrations/windsurf/: README.md
integrations/zed/: README.md
src/puppet_ai/: __init__.py  cli.py  instructions.py  types.py
src/puppet_ai/config/: presets.py
src/puppet_ai/core/: accessibility.py  actions.py  capture.py  cdp.py  detector.py  element_overlay.py  foveal.py  ocr.py  ocr_cache.py  peripheral.py  permissions.py  pii_filter.py  vision_agent.py  wait.py  world_model.py
src/puppet_ai/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py  sampling.py
src/puppet_ai/server/: mcp.py
src/vision_pipe/: __init__.py  cli.py  instructions.py  types.py
src/vision_pipe/config/: presets.py  schema.py
src/vision_pipe/core/: accessibility.py  actions.py  capture.py  detector.py  foveal.py  ocr.py  ocr_cache.py  peripheral.py  permissions.py  pii_filter.py  world_model.py
src/vision_pipe/providers/: __init__.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py  sampling.py
src/vision_pipe/server/: mcp.py
tests/: conftest.py  test_accessibility.py  test_actions.py  test_cdp.py  test_cli.py  test_config.py  test_detector.py  test_foveal.py  test_instructions.py  test_mcp_server.py  test_mcp_v2.py  test_ocr_bounds.py  test_ocr_cache.py  test_peripheral.py  test_permissions.py  test_pii_filter.py  test_types.py  test_vision_agent.py  test_wait.py  test_world_model.py
tests/test_providers/: test_ollama.py  test_registry.py
