[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vision-pipe"
version = "0.1.0"
description = "Human-like vision for AI agents — fast screen perception via MCP"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.0.0",
    "numpy>=1.24",
    "Pillow>=10.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
gemini = ["google-genai>=1.0"]
openai = ["openai>=1.50"]
apple-vision = ["pyobjc-framework-Vision>=10.0", "pyobjc-framework-ScreenCaptureKit>=10.0"]
mlx = ["mlx>=0.20", "mlx-vlm>=0.1"]
all = ["vision-pipe[anthropic,gemini,openai,apple-vision,mlx]"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24", "ruff>=0.5"]

[project.scripts]
vision-pipe = "vision_pipe.cli:main"

[project.entry-points."vision_pipe.providers"]

[tool.hatch.build.targets.wheel]
packages = ["src/vision_pipe"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
